apps/web/err_final.txt
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Checking deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0428]: the name `header` is defined multiple times
   --> apps\web\src\i18n.rs:182:5
    |
 30 |     pub mod header {
    |     -------------- previous definition of the module `header` here
...
182 |     pub mod header {
    |     ^^^^^^^^^^^^^^ `header` redefined here
    |
    = note: `header` must be defined only once in the type namespace of this module

error[E0425]: cannot find function `home` in module `t::header`
  --> apps\web\src\components\header.rs:26:46
   |
26 |                     title=move || t::header::home(locale.get())
   |                                              ^^^^ not found in `t::header`

error[E0425]: cannot find function `open` in module `t::header`
  --> apps\web\src\components\header.rs:38:46
   |
38 |                     title=move || t::header::open(locale.get())
   |                                              ^^^^ not found in `t::header`
   |
help: consider importing this function
   |
 1 + use leptos::attr::open;
   |
help: if you import `open`, refer to it directly
   |
38 -                     title=move || t::header::open(locale.get())
38 +                     title=move || open(locale.get())
   |

error[E0425]: cannot find function `command` in module `t::header`
  --> apps\web\src\components\header.rs:50:46
   |
50 |                     title=move || t::header::command(locale.get())
   |                                              ^^^^^^^ not found in `t::header`

warning: unused import: `web_sys::KeyboardEvent`
 --> apps\web\src\components\command_palette.rs:3:5
  |
3 | use web_sys::KeyboardEvent;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `wasm_bindgen::prelude::*`
 --> apps\web\src\components\command_palette.rs:4:5
  |
4 | use wasm_bindgen::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `wasm_bindgen::JsCast`
 --> apps\web\src\components\command_palette.rs:5:5
  |
5 | use wasm_bindgen::JsCast;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `leptos::prelude::*`
 --> apps\web\src\i18n.rs:1:5
  |
1 | use leptos::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0428.
For more information about an error, try `rustc --explain E0425`.
warning: `deve_web` (bin "deve_web") generated 4 warnings
error: could not compile `deve_web` (bin "deve_web") due to 4 previous errors; 4 warnings emitted
